--- a/README
+++ b/README
@@ -1,29 +1,32 @@
-Current recommended release: release_1.zip
-Get it from Downloads! I don't recommend using the /src, it might be broken VERY OFTEN.
-
-LOCALSHOPS - SHOP EDITING SUITE
---------------------------------
-LocalShops - Shop Editing Suite is a PHP program made to make using LocalShops a lot easier. The program's main goal is to help new users make shops and add items to them. The editing suite currently supports version 3.x.x of the plugin, and will be updated every time the file format changes, even a small bit.
+/*
+ * LocalSuite
+ * 
+ * @author: Nijikokun <nijikokun@gmail.com>
+ * @author: iffa
+ * @copyright: Copyright (C) 2011
+ * @license: GNUv3 Affero License <http://www.gnu.org/licenses/agpl-3.0.html>
+ */
+ 
+LocalSuite is a PHP Front/Backend for LocalShops by Jonbas (Maintained by Cereal).
+Version 3.x is supported by LocalSuite.
 
 FEATURES
 ---------
 Generate shops easily without commands
-Add items to the shop easily (with a little bit of item id knownledge)
-Upload shops for the program to use
+Add items to the shop easily
+Upload, and Edit shops for the program to use
+Download Shops in an Archive for easy extraction / moving.
 
 COMING SOON / PLANNED
 ----------------------
-Edit shop's settings after generating
-Advanced shop editing
-Item aliases
-Shop name input instead of UUID input on adding items
+Finish Edit Settings page.
+Fixing bugs that are found.
 
 INSTALLATION GUIDE
 -------------------
-1. Download /src or a recommended release from Downloads
-2. Edit shops/generator.php and shops/generator2.php with the URLs to the index.php and additem.php! (optional, if you don't want working links)
-3. Upload the files to your webspace.
-4. Go to the index of the program.
-5. Have fun!
-
+1. Download the archived format of the source or an archive download from the Downloads Section.
+2. Extract the archive into your htdocs folder, or wherever your localhost / web files are kept.
+3. Open inc/config.php and edit if needed. (If you change the shops directory or what not.)
+4. Upload (If Needed)
+5. Navigate to the index page, and start having fun!
 6. Suggest features and report bugs!
